# agent-release-gate

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: results.json  spec.yaml
src/agent_release_gate/: __init__.py  cli.py  evaluator.py  history.py  models.py
src/agent_release_gate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py  test_evaluator.py  test_history.py
